--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,19 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
+/cypress/screenshots
+/cypress/videos
 
 # next.js
 /.next/
 /out/
+/build
+next-env.d.ts
 
 # production
 /build
@@ -23,6 +21,7 @@
 # misc
 .DS_Store
 *.pem
+Thumbs.db
 
 # debug
 npm-debug.log*
@@ -30,12 +29,40 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# local env files
+.env*.local
+.env
+.env.development
+.env.test
+.env.production
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+
+# IDE / Editors
+/.idea
+/.vscode
+*.swp
+*.swo
+.editorconfig
+
+# Logs
+logs
+*.log
+
+# Cache directories
+.npm
+.eslintcache
+.stylelintcache
+.prettiercache
+
+# temp directories
+/temp
+/tmp
+
+# Generated files
+/public/sitemap*.xml
+/public/robots.txt
