--- a/package.json
+++ b/package.json
@@ -3,46 +3,67 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "type-check": "tsc --noEmit",
+    "prepare": "husky install",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
-    "axios": "^1.6.2",
-    "bcryptjs": "^2.4.3",
-    "cookies-next": "^4.1.0",
-    "date-fns": "^2.30.0",
-    "jose": "^5.1.3",
-    "jsonwebtoken": "^9.0.2",
-    "next": "15.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
-    "swr": "^2.2.4",
-    "zod": "^3.22.4"
+    "@hookform/resolvers": "3.3.2",
+    "axios": "1.6.2",
+    "bcryptjs": "2.4.3",
+    "cookies-next": "4.1.0",
+    "date-fns": "2.30.0",
+    "jose": "5.1.3",
+    "jsonwebtoken": "9.0.2",
+    "next": "14.0.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.48.2",
+    "swr": "2.2.4",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.1.2",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jest": "^29.5.10",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.1",
-    "eslint-plugin-prettier": "^5.0.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^4",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5"
+    "@next/bundle-analyzer": "^14.0.3",
+    "@testing-library/jest-dom": "6.1.5",
+    "@testing-library/react": "14.1.2",
+    "@types/bcryptjs": "2.4.6",
+    "@types/jest": "29.5.10",
+    "@types/jsonwebtoken": "9.0.5",
+    "@types/next": "^8.0.7",
+    "@types/node": "20.10.0",
+    "@types/react": "18.2.39",
+    "@types/react-dom": "18.2.17",
+    "autoprefixer": "10.4.16",
+    "eslint": "8.54.0",
+    "eslint-config-next": "14.0.3",
+    "eslint-plugin-prettier": "5.0.1",
+    "husky": "^8.0.3",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "lint-staged": "^15.1.0",
+    "postcss": "8.4.31",
+    "prettier": "3.1.0",
+    "prettier-plugin-tailwindcss": "0.5.7",
+    "tailwindcss": "3.3.5",
+    "ts-jest": "29.1.1",
+    "typescript": "5.3.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   }
 }
