--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "3.3.2",
+    "@tailwindcss/forms": "^0.5.10",
     "axios": "1.6.2",
     "bcryptjs": "2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cookies-next": "4.1.0",
     "date-fns": "2.30.0",
     "jose": "5.1.3",
@@ -29,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.48.2",
     "swr": "2.2.4",
+    "tailwind-merge": "^3.0.2",
     "zod": "3.22.4"
   },
   "devDependencies": {
